charts/schema-registry-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: schema-registry-service
  name: schema-registry-service
spec:
  type: NodePort
  ports:
    - name: schema-registry-port
      port: 8081
      targetPort: 8081
  selector:
    app: schema-registry

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schema-registry
  name: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:5.5.2
