charts/walker-backend-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walker-backend-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walker-backend-service
  template:
    metadata:
      labels:
        app: walker-backend-service
    spec:
      containers:
        - name: walker-backend-service
          image: ihorzadyra/walker-backend-service:0.0.1
          ports:
            - containerPort: 9000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /probes/readiness
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /probes/liveness
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---

apiVersion: v1
kind: Service
metadata:
  name: walker-backend-service-node-port
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: walker-backend-service
