charts/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walker-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/upstream-hash-by: $proxy_add_x_forwarded_for
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: walker-backend-service-node-port
                port:
                  number: 9000
